--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -6,3 +6,4 @@ guides:
   - arbitrum-nova-arbitrum-university-144.yaml
   - arbitrum-one-arbitrum-university-177.yaml
   - arbitrum-bridge-arbitrum-university-959.yaml
+  - cross-chain-messaging-arbitrum-university-977.yaml
