update guide Running Full Node (Nitro)

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -7,3 +7,4 @@ guides:
   - arbitrum-one-arbitrum-university-177.yaml
   - arbitrum-bridge-arbitrum-university-959.yaml
   - cross-chain-messaging-arbitrum-university-977.yaml
+  - running-full-node-nitro-arbitrum-university-683.yaml
