--- a/src/guides/main/running-full-node-nitro-arbitrum-university-683.yaml
+++ b/src/guides/main/running-full-node-nitro-arbitrum-university-683.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: How to run a full node (Nitro)?
-created: '2023-11-03T17:29:29.164Z'
+created: '2023-11-03T17:34:03.620Z'
 guideType: onboarding
 key: running-full-node-nitro-arbitrum-university-683
 name: Running Full Node (Nitro)
@@ -109,15 +109,35 @@ steps:
 
       ### Permissions 
 
+      Resolve permission issues for the Nitro Docker image with:
 
+
+      ```bash
+
+      mkdir /data/arbitrum && chmod -R 777 /data/arbitrum
+
+      ```
+
+
+      This ensures all users have full access to the `/data/arbitrum` directory.
 
 
       ### Watchtower Mode
 
-
+      Nitro full nodes operate in Watchtower mode by default, monitoring
+      on-chain assertions and flagging discrepancies with an error log. This
+      mode incurs minimal execution and memory overhead. If preferred, reduce
+      resource usage by deactivating Watchtower with the flag
+      `--node.staker.enable=false`.
 
 
       ### Pruning
+
+      To prune a Nitro full node, which entails discarding redundant blockchain
+      data beyond the latest 128 blocks to save disk space and enhance
+      efficiency, use `--init.prune` with "full" or "validator" as values
+      tailored to your node type. Initiate pruning at node startup; note that
+      the node will be unavailable for RPC requests during this operation.
     name: Configurations
     stepItems: []
     uuid: 6b399e10-ae42-4832-a0a9-3c783ac1fdb2
