update guide Useful Tools

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -8,3 +8,4 @@ guides:
   - arbitrum-bridge-arbitrum-university-959.yaml
   - cross-chain-messaging-arbitrum-university-977.yaml
   - running-full-node-nitro-arbitrum-university-683.yaml
+  - useful-tools-arbitrum-university-260.yaml
