--- a/src/guides/main/useful-tools-arbitrum-university-260.yaml
+++ b/src/guides/main/useful-tools-arbitrum-university-260.yaml
@@ -1,21 +1,38 @@
 categories: []
 content: Understanding the Useful Tools in Arbitrum
-created: '2023-11-03T18:07:41.366Z'
+created: '2023-11-03T18:11:30.175Z'
 guideType: onboarding
 key: useful-tools-arbitrum-university-260
 name: Useful Tools
 publishStatus: Live
 steps:
-  - content: |-
+  - content: >-
+      ## RPC Endpoints
 
-      Introduction Comments 
-              
+      RPC endpoints facilitate interaction with various Arbitrum chains.
+      Sequencer endpoints are limited to `eth_sendRawTransaction` and
+      `eth_sendRawTransactionConditional` operations.
+
+
+      | NameRPC Url(s)Chain IDBlock explorerUnderlying chainTech stackSequencer
+      feed URLSequencer endpoint⚠️Arbitrum
+      Onehttps://arb1.arbitrum.io/rpc42161https://arbiscan.io/EthereumNitro
+      (Rollup)wss://arb1.arbitrum.io/feedhttps://arb1-sequencer.arbitrum.io/rpcArbitrum
+      Novahttps://nova.arbitrum.io/rpc42170https://nova.arbiscan.io/EthereumNitro
+      (AnyTrust)wss://nova.arbitrum.io/feedhttps://nova-sequencer.arbitrum.io/rpcArbitrum
+      Goerli
+      (Testnet)https://goerli-rollup.arbitrum.io/rpc421613https://goerli.arbiscan.ioGoerliNitro
+      (Rollup)wss://goerli-rollup.arbitrum.io/feedhttps://goerli-rollup-sequencer.arbitrum.io/rpcArbitrum
+      Sepolia
+      (Testnet)https://sepolia-rollup.arbitrum.io/rpc421614https://sepolia.arbiscan.ioSepoliaNitro
+      (Rollup)wss://sepolia-rollup.arbitrum.io/feedhttps://sepolia-rollup-sequencer.arbitrum.io/rpcStylus
+      Testnethttps://stylus-testnet.arbitrum.io/rpc23011913https://stylus-testnet-explorer.arbitrum.io/Arbitrum
+      SepoliaNitro
+      (Rollup)wss://stylus-sepolia.arbitrum.io/feedhttps://stylus-testnet-sequencer.arbitrum.io/rpc
+      |
+           
     name: RPC Endpoint Providers
-    stepItems:
-      - label: Full Name
-        required: false
-        type: PublicShortInput
-        uuid: d8978b38-486a-43ef-94ea-6c7e5a3baf30
+    stepItems: []
     uuid: 655e2e3e-9d5d-4ecd-9668-8e9671ee5ed3
   - content: ''
     name: Evaluation
@@ -92,6 +109,6 @@ steps:
     uuid: 02bc1767-ce09-4805-b42d-f48b67f55ee7
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/QmWy8EeMnxqx96VEPx2NBwzqtKxvMQqVVYvmPKgAYS2cUi
-uuid: 69222987-d34b-458e-9b9a-08f7361fe04a
+uuid: useful-tools-arbitrum-university-260
 version: 1
 priority: 50
