update guide Useful Tools

--- a/src/guides/main/useful-tools-arbitrum-university-260.yaml
+++ b/src/guides/main/useful-tools-arbitrum-university-260.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Understanding the Useful Tools in Arbitrum
-created: '2023-11-03T18:18:26.858Z'
+created: '2023-11-03T18:20:28.184Z'
 guideType: onboarding
 key: useful-tools-arbitrum-university-260
 name: Useful Tools
@@ -45,6 +45,15 @@ steps:
       23011913 | https://stylus-testnet-explorer.arbitrum.io/ | Arbitrum Sepolia
       | Nitro (Rollup)   | wss://stylus-sepolia.arbitrum.io/feed |
       https://stylus-testnet-sequencer.arbitrum.io/rpc |
+
+
+      ## RPC Providers
+
+      To engage with public Arbitrum chains, you can utilize the same esteemed
+      node providers that serve the Ethereum ecosystem.
+
+      | ProviderArb One?Arb Nova?Arb Goerli?Arb
+      Sepolia?1RPC✅Alchemy✅✅Allnodes✅✅✅Ankr✅Blast✅✅✅BlockPi✅✅✅ |
     name: RPC Endpoint Providers
     stepItems: []
     uuid: 655e2e3e-9d5d-4ecd-9668-8e9671ee5ed3
