update guide Useful Tools

--- a/src/guides/main/useful-tools-arbitrum-university-260.yaml
+++ b/src/guides/main/useful-tools-arbitrum-university-260.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Understanding the Useful Tools in Arbitrum
-created: '2023-11-03T18:23:13.196Z'
+created: '2023-11-03T18:24:06.764Z'
 guideType: onboarding
 key: useful-tools-arbitrum-university-260
 name: Useful Tools
@@ -52,9 +52,9 @@ steps:
       To engage with public Arbitrum chains, you can utilize the same esteemed
       node providers that serve the Ethereum ecosystem.
 
-      | Provider   | Arb One? | Arb Nova? | Arb Goerli? | Arb Sepolia? |   |
+      | Provider   | Arb One? | Arb Nova? | Arb Goerli? | Arb Sepolia? |
 
-      |------------|----------|-----------|-------------|--------------|---|
+      |------------|----------|-----------|-------------|--------------|
 
       | Allnodes   | ✅        | ✅         | ✅           |              |
 
