update guide Useful Tools

--- a/src/guides/main/useful-tools-arbitrum-university-260.yaml
+++ b/src/guides/main/useful-tools-arbitrum-university-260.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Understanding the Useful Tools in Arbitrum
-created: '2023-11-06T11:53:51.823Z'
+created: '2023-11-06T11:56:48.452Z'
 guideType: onboarding
 key: useful-tools-arbitrum-university-260
 name: Useful Tools
@@ -160,12 +160,18 @@ steps:
       |------------|---------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 
       | Arbiscan   | Track/trace transactions and examine addresses on Arbitrum
-      networks | Arbitrum One: https://arbiscan.io/ Arbitrum Nova:
-      https://nova.arbiscan.io/ Arbitrum Sepolia: https://sepolia.arbiscan.io
+      networks | Arbitrum One: https://arbiscan.io/ 
+
+      Arbitrum Nova: https://nova.arbiscan.io/ 
+
+      Arbitrum Sepolia: https://sepolia.arbiscan.io 
+
       Arbitrum Goerli: https://goerli.arbiscan.io/ |
 
       | DexGuru    | Track/trace transactions and examine addresses on Arbitrum
-      networks | Arbitrum One: https://arbitrum.dex.guru/ Arbitrum Nova:
+      networks | Arbitrum One: https://arbitrum.dex.guru/ 
+
+      Arbitrum Nova:
       https://nova.dex.guru/                                                                                        
       |
 
@@ -175,13 +181,14 @@ steps:
       |
 
       | Dune       | Visualize and analyze Arbitrum network
-      data                         | Dune Arbitrum community-created Duune
-      dashboard                                                                                                                       
+      data                         | https://dune.com/browse/dashboards 
+
+      https://dune.com/browse/dashboards?q=arbitrum                                                                                                                       
       |
 
       | Chainbase  | Index, transform, and use on-chain data at
       scale                    |
-      Chainbase                                                                                                                                                             
+      https://chainbase.com/                                                                                                                                                             
       |
     name: Monitoring Tools & Block Explore
     stepItems: []
