--- a/src/guides/main/useful-tools-arbitrum-university-260.yaml
+++ b/src/guides/main/useful-tools-arbitrum-university-260.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Understanding the Useful Tools in Arbitrum
-created: '2023-11-06T11:56:48.452Z'
+created: '2023-11-06T12:02:00.592Z'
 guideType: onboarding
 key: useful-tools-arbitrum-university-260
 name: Useful Tools
@@ -160,18 +160,12 @@ steps:
       |------------|---------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 
       | Arbiscan   | Track/trace transactions and examine addresses on Arbitrum
-      networks | Arbitrum One: https://arbiscan.io/ 
-
-      Arbitrum Nova: https://nova.arbiscan.io/ 
-
-      Arbitrum Sepolia: https://sepolia.arbiscan.io 
-
+      networks | Arbitrum One: https://arbiscan.io/ Arbitrum Nova:
+      https://nova.arbiscan.io/ Arbitrum Sepolia: https://sepolia.arbiscan.io
       Arbitrum Goerli: https://goerli.arbiscan.io/ |
 
       | DexGuru    | Track/trace transactions and examine addresses on Arbitrum
-      networks | Arbitrum One: https://arbitrum.dex.guru/ 
-
-      Arbitrum Nova:
+      networks | Arbitrum One: https://arbitrum.dex.guru/ Arbitrum Nova:
       https://nova.dex.guru/                                                                                        
       |
 
@@ -181,14 +175,13 @@ steps:
       |
 
       | Dune       | Visualize and analyze Arbitrum network
-      data                         | https://dune.com/browse/dashboards 
-
-      https://dune.com/browse/dashboards?q=arbitrum                                                                                                                       
+      data                         | https://dune.com/browse/dashboards
+      https://dune.com/browse/dashboards?q=arbitrum                                                                                      
       |
 
       | Chainbase  | Index, transform, and use on-chain data at
       scale                    |
-      https://chainbase.com/                                                                                                                                                             
+      https://chainbase.com/                                                                                                                                                
       |
     name: Monitoring Tools & Block Explore
     stepItems: []
