update guide Running a Validator

--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -9,3 +9,4 @@ guides:
   - cross-chain-messaging-arbitrum-university-977.yaml
   - running-full-node-nitro-arbitrum-university-683.yaml
   - useful-tools-arbitrum-university-260.yaml
+  - running-a-validator-arbitrum-university-967.yaml
